git push --all origin

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Auto salon</title>
+    <link rel="stylesheet" href="stilovi.css">
 </head>
 <body>
+    <div class="drugi">
+        <h3>AUTO SALON M <br> DOBRO DOŠLI!</h3>
+        <button class="tipka1">POKRENI</button>
+    </div>
+    <!--
+   <div class="prvi">
+    <button id="left"><i class="arrow"></i></button>
+        <div class="images">
+            <img src="/img/84519_ford-puma-pb-feb21-pk.jpg" alt="W">
+            <img src="/img/photo-1533473359331-0135ef1b58bf.jpeg" alt="WW">
+            <img src="/img/photo-1568605117036-5fe5e7bab0b7.jpeg" alt="WWW">
+        </div>
+        <button id="right"><i class="arrow"></i></button>
+    </div>
     
+<div class="loader"></div>
+-->
+    <script src="main.js"></script>
 </body>
 </html>
