--- a/html/index.html
+++ b/html/index.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto salon</title>
-    <link rel="stylesheet" href="stilovi.css">
+    <title>Log in</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/stilovi.css">
 </head>
 <body>
-    <div class="drugi">
-        <h3>AUTO SALON M <br> DOBRO DOŠLI!</h3>
-        <button class="tipka1">POKRENI</button>
+    <div class="bg-image" style="background-image: url(/img/Screenshot_1.png)">
+        <div class="empty">.</div>
+          <div class="container">
+            <h1>AUTO SALON <i>M</i></h1>
+              <form class="row g-3">
+                <div class="col-auto">
+                  <label for="inputEmail2" class="visually-hidden">Email</label>
+                  <input type="text" class="form-control" id="inputEmail2" size="30px" placeholder="my@gmail.com">
+                </div>
+                <div class="col-auto">
+                  <label for="inputPassword2" class="visually-hidden">Password</label>
+                  <input type="password" class="form-control" id="inputPassword2" size="20px" placeholder="Password">
+                </div>
+              </form>
+              <div class="col-auto" align="center">
+                <input type="button" class="btn btn-danger mb-3" value="Prijavi se" onclick="submit()"></input>
+              </div>
+          </div>
     </div>
-    <!--
-   <div class="prvi">
-    <button id="left"><i class="arrow"></i></button>
-        <div class="images">
-            <img src="/img/84519_ford-puma-pb-feb21-pk.jpg" alt="W">
-            <img src="/img/photo-1533473359331-0135ef1b58bf.jpeg" alt="WW">
-            <img src="/img/photo-1568605117036-5fe5e7bab0b7.jpeg" alt="WWW">
-        </div>
-        <button id="right"><i class="arrow"></i></button>
-    </div>
-    
-<div class="loader"></div>
--->
-    <script src="main.js"></script>
+
+    <script src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
