--- a/html/index2.html
+++ b/html/index2.html
@@ -5,8 +5,174 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto salon M</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/stilovi2.css">
 </head>
 <body>
+
+    <div class="head">
+        <div class="news">
+            <div class="img1" style="margin-right: 5px;" >
+                <img src="/img/icons8-clock-48.png" alt="time">
+            </div>
+            <div class="text">
+                <h5>RADNO VRIJEME</h5>
+                "Pon - Pet : 09:00 - 18:00h" <br>
+                "Sub 09:00 - 15:00h"
+            </div>
+        </div>
+        <div class="news">
+            <div class="img1" style="margin-right: 5px;" >
+                <img src="/img/icons8-call-48.png" alt="time">
+            </div>
+            <div class="text">
+                <h5>KONTAKTIRAJTE NAS</h5>
+                "Tel: +38762111222333" <br>
+                "Viber: +38762444555666"
+            </div>
+        </div>
+        <div class="news">
+            <div class="img2" style="margin-right: 5px;" >
+                <img src="/img/icons8-location-48.png" alt="time">
+            </div>
+            <div class="text">
+                <h5>ADRESA</h5>
+                "Ulica b.b" <br>
+                "Travnik, BiH"
+            </div>
+        </div>
+        <div class="news2">
+               <h3>AUTO SALON <i>M</i></h3>
+               
+        </div>
+    </div>
+    <div class="header">
+        <nav class="navbar navbar-expand-lg header-nav navbar-light bg-danger">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><i id="i">M</i></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarupportedContent" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-between" id="navbarupportedContent">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Početna</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Sva vozila</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Zamjena vozila</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      About
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item me-5">
+                    <a class="nav-link" href="#">Kontakt</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2 " type="search" placeholder="Pretraži.." aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit" onclick="showCars()">Search</button>
+                  </form>
+              </div>
+            </div>
+          </nav>
+          <br>
+    </div>
+    <div class="alert alert-dark" role="alert">
+      <h4>- Dobro Došli na Web stranicu Auto salona M - </h4> 
+    </div>
+    <div class="container px-4">
+      <div class="row gx-5">
+        <div class="col">
+         <div class="p-3 border bg-light" id="pretraga"><h4 style="font-weight:bold;">Rezultati pretrage</h4></div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="RezultatiPretrage" style="display: flex;"></div>
+    <a class="btn btn-primary" id="buttons2" onclick="DeleteSearch()">Izbriši rezultate pretrage</a>
+    <br>
+    <div class="container px-4">
+      <div class="row gx-5">
+        <div class="col">
+         <div class="p-3 border bg-light"><h4 style="font-weight:bold;">Ubrzo u ponudi...</h4></div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="new_cars">
+    <div class="card" style="width: 18rem;">
+      <img src="/img/Ford_Focus_Trend_(III)_–_Frontansicht,_17._September_2011,_Ratingen.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text"><b>Naziv:</b> Ford Focus <br> <b>Cijena: 35000 KM</b> <br> <b>Godište: </b>2019</p>   
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="/img/2018_Audi_A6_Sport_40_TDi_S-A_2.0.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text"><b>Naziv:</b>Audi A6 <br> <b>Cijena: 80000 KM</b> <br> <b>Godište: </b>2018</p>   
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="/img/BMW_G30_FL_IMG_5351.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text"><b>Naziv:</b>BMW G30 <br> <b>Cijena: 60000 KM</b> <br> <b>Godište: </b>2016</p>   
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="/img/VW_Golf_2.0_TDI_BlueMotion_Technology_Highline_(VII)_–_Frontansicht,_28._Juli_2013,_Münster.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text"><b>Naziv:</b>Golf 7 <br> <b>Cijena: 15000 KM</b> <br> <b>Godište: </b>2013</p>   
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="/img/VW_Passat_B8_Limousine_2.0_TDI_Highline.JPG" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text"><b>Naziv:</b>VW Passat B8 <br> <b>Cijena: 30000</b> <br> <b>Godište: </b>2015</p>   
+      </div>
+    </div>
+  </div>
+  <br>
+  <hr>
+  <br>
+  <div class="container px-4">
+    <div class="row gx-5">
+      <div class="col">
+       <div class="p-3 border bg-light"><h4 style="font-weight:bold;">Top ponuda</h4></div>
+      </div>
+    </div>
+  </div>
+  <br>
+    <div class="ZaApi">
+      </div>
+    </div>
     
+    <br>
+    <br>
+    <br>
+    <div class="foter">
+      <div class="main">
+        <p id="pharagraph">Auto Salon M, Ulica b.b. Travnik, BiH <br>
+          Telefon: +38762111222333, Viber: +38762444555666, Email: asm@example.com <br>
+          © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
+        </p>
+        <h3 id="logo"> Auto Salon <i>M</i></h3>
+      </div>
+    </div>
+    <script src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
