--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto salon M</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/stilovi2.css">
+    <link rel="stylesheet" href="/css/mainpage_style.css">
 </head>
 <body>
 
@@ -66,19 +66,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Zamjena vozila</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      About
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/html/about.html" >About</a>
                   </li>
                   <li class="nav-item me-5">
-                    <a class="nav-link" href="#">Kontakt</a>
+                    <a class="nav-link" href="/html/contacts.html">Kontakt</a>
                   </li>
                 </ul>
                 <form class="d-flex">
