git push --all origin

--- a/html/about.html
+++ b/html/about.html
@@ -83,11 +83,27 @@
         <br>
   </div>
   <div class="pharagraphs">
-        <div class="p1">
-          
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime eius laborum neque obcaecati inventore aliquid qui perferendis! At a earum eligendi nam necessitatibus quidem voluptates, magni, mollitia dolorum, repudiandae quia?</p>
-        </div>
+      <div class="Profil">
+        <h4><b>Profil tvrtke</b><hr></h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime eius laborum neque obcaecati inventore aliquid qui perferendis! At a earum eligendi nam necessitatibus quidem voluptates, magni, mollitia dolorum, repudiandae quia?Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sapiente debitis molestias reiciendis quisquam totam animi maxime consectetur delectus distinctio voluptatibus dolores ipsum voluptates architecto ad, illum temporibus porro et.</p>
       </div>
+      <div id="lines" style="height: 2px; width: 100%; background-color:red;"></div>
+      <br>
+      <div class="History">
+        <h4><b>Historija tvrtke</b><hr></h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa aliquam amet ad quas dicta numquam, consectetur, voluptatibus pariatur voluptas, asperiores maxime! Esse qui alias vel deleniti mollitia id distinctio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam nesciunt voluptatum dignissimos veniam minima neque facere cum reiciendis deleniti blanditiis. Doloribus quasi eligendi debitis nihil earum. Commodi iure molestiae tenetur, illum cum fugiat neque rerum vel aliquid suscipit! Iure, necessitatibus fuga. Eligendi voluptatum non nisi sint illo provident labore, nihil voluptas ut, impedit ea exercitationem quae accusamus minima, nostrum accusantium dolore hic beatae repellat dolores laborum! Similique doloremque tempora cupiditate totam. Consequuntur distinctio tempora dolorum ex est qui officia recusandae cum at, praesentium obcaecati nulla eaque doloremque doloribus animi facilis quibusdam sit quis excepturi expedita velit similique voluptatibus? Nihil, impedit! Deleniti, eos corrupti deserunt nihil sapiente ullam aliquid neque placeat veritatis velit eveniet at repudiandae vel ex accusamus dolore exercitationem. Facilis veritatis maxime quos doloremque tempora cum quidem quae suscipit libero est praesentium beatae nihil quia officiis dolor, aliquam quam consequuntur laudantium expedita? Qui, officia autem eos recusandae expedita totam!</p>
+      </div>
+  </div>
+  <br>
+  <div class="foter">
+    <div class="main">
+      <p id="pharagraph">Auto Salon M, Ulica b.b. Travnik, BiH <br>
+        Telefon: +38762111222333, Viber: +38762444555666, Email: asm@example.com <br>
+        © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
+      </p>
+      <h3 id="logo"> Auto Salon <i>M</i></h3>
+    </div>
+  </div>
     
 
     <script src="/js/main.js"></script>
