--- a/contacts.html
+++ b/contacts.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto salon M</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/mainpage_style.css">
+    <link rel="stylesheet" href="./css/mainpagestyle.css">
 </head>
 <body>
 
     <div class="head">
         <div class="news">
             <div class="img1" style="margin-right: 5px;" >
-                <img src="/img/icons8-clock-48.png" alt="time">
+                <img src="./img/icons8-clock-48.png" alt="time">
             </div>
             <div class="text">
                 <h5>RADNO VRIJEME</h5>
@@ -23,7 +23,7 @@
         </div>
         <div class="news">
             <div class="img1" style="margin-right: 5px;" >
-                <img src="/img/icons8-call-48.png" alt="time">
+                <img src="./img/icons8-call-48.png" alt="time">
             </div>
             <div class="text">
                 <h5>KONTAKTIRAJTE NAS</h5>
@@ -33,7 +33,7 @@
         </div>
         <div class="news">
             <div class="img2" style="margin-right: 5px;" >
-                <img src="/img/icons8-location-48.png" alt="time">
+                <img src="./img/icons8-location-48.png" alt="time">
             </div>
             <div class="text">
                 <h5>ADRESA</h5>
@@ -58,19 +58,19 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarupportedContent">
               <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href='/html/mainpage.html'>Početna</a>
+                  <a class="nav-link" aria-current="page" href='mainpage.html'>Početna</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Sva vozila</a>
+                  <a class="nav-link" href="allcars.html">Sva vozila</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Zamjena vozila</a>
+                  <a class="nav-link" href="addingcars.html">Postavljanje vozila</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/about.html">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item me-5">
-                  <a class="nav-link" href="/html/contacts.html">Kontakt</a>
+                  <a class="nav-link" href="#">Kontakt</a>
                 </li>
               </ul>
               <form class="d-flex">
@@ -98,10 +98,10 @@
   </div>
     <div class="social_network">
         <h4><b>Social networks</b></h4>
-        <a href="https://www.facebook.com"><img src="/img/icons8-facebook-64.png" alt="fb"></a> 
-        <a href="https://www.instagram.com"><img src="/img/icons8-instagram-64.png" alt="insta"></a> 
-        <a href="https://www.twitter.com"><img src="/img/icons8-twitter-64.png" alt="tvit"></a>
-        <a href="https://www.youtube.com"><img src="/img/icons8-youtube-logo-64.png" alt="yt"></a>
+        <a href="https://www.facebook.com"><img src="./img/icons8-facebook-64.png" alt="fb"></a> 
+        <a href="https://www.instagram.com"><img src="./img/icons8-instagram-64.png" alt="insta"></a> 
+        <a href="https://www.twitter.com"><img src="./img/icons8-twitter-64.png" alt="tvit"></a>
+        <a href="https://www.youtube.com"><img src="./img/icons8-youtube-logo-64.png" alt="yt"></a>
     </div> 
     <div class="bank">
       <h4><b>Žiro računi</b></h4>
@@ -120,15 +120,19 @@
   </div>
   <br>
   <div class="foter">
-    <div class="main">
-      <p id="pharagraph">Auto Salon M, Ulica b.b. Travnik, BiH <br>
-        Telefon: +38762111222333, Viber: +38762444555666, Email: asm@example.com <br>
-        © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
+    <div id="pharagraph">
+      <p>Auto Salon M, Ulica b.b. Travnik, BiH <br>
+          Telefon: +38762111222333
+          Viber: +38762444555666 
+          Email: asm@example.com <br>
+          © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
       </p>
-      <h3 id="logo"> Auto Salon <i>M</i></h3>
+    </div>
+    <div id="logo">
+      <h3>Auto Salon<i>M</i></h3>
     </div>
   </div>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>  
 </body>
