--- a/mainpage.html
+++ b/mainpage.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto salon M</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/mainpage_style.css">
+    <link rel="stylesheet" href="./css/mainpagestyle.css">
 </head>
 <body>
 
     <div class="head">
         <div class="news">
             <div class="img1" style="margin-right: 5px;" >
-                <img src="/img/icons8-clock-48.png" alt="time">
+                <img src="./img/icons8-clock-48.png" alt="time">
             </div>
             <div class="text">
                 <h5>RADNO VRIJEME</h5>
@@ -23,7 +23,7 @@
         </div>
         <div class="news">
             <div class="img1" style="margin-right: 5px;" >
-                <img src="/img/icons8-call-48.png" alt="time">
+                <img src="./img/icons8-call-48.png" alt="time">
             </div>
             <div class="text">
                 <h5>KONTAKTIRAJTE NAS</h5>
@@ -33,7 +33,7 @@
         </div>
         <div class="news">
             <div class="img2" style="margin-right: 5px;" >
-                <img src="/img/icons8-location-48.png" alt="time">
+                <img src="./img/icons8-location-48.png" alt="time">
             </div>
             <div class="text">
                 <h5>ADRESA</h5>
@@ -61,16 +61,16 @@
                     <a class="nav-link" aria-current="page" href="#">Početna</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Sva vozila</a>
+                    <a class="nav-link" href="allcars.html">Sva vozila</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Zamjena vozila</a>
+                    <a class="nav-link" href="addingcars.html">Postavljanje vozila</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/html/about.html" >About</a>
+                    <a class="nav-link" href="about.html" >About</a>
                   </li>
                   <li class="nav-item me-5">
-                    <a class="nav-link" href="/html/contacts.html">Kontakt</a>
+                    <a class="nav-link" href="contacts.html">Kontakt</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -106,31 +106,31 @@
     <br>
     <div class="new_cars">
     <div class="card" style="width: 18rem;">
-      <img src="/img/Ford_Focus_Trend_(III)_–_Frontansicht,_17._September_2011,_Ratingen.jpg" class="card-img-top" alt="...">
+      <img src="./img/Ford_Focus_Trend_(III)_–_Frontansicht,_17._September_2011,_Ratingen.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text"><b>Naziv:</b> Ford Focus <br> <b>Cijena: 35000 KM</b> <br> <b>Godište: </b>2019</p>   
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="/img/2018_Audi_A6_Sport_40_TDi_S-A_2.0.jpg" class="card-img-top" alt="...">
+      <img src="./img/2018_Audi_A6_Sport_40_TDi_S-A_2.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text"><b>Naziv:</b>Audi A6 <br> <b>Cijena: 80000 KM</b> <br> <b>Godište: </b>2018</p>   
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="/img/BMW_G30_FL_IMG_5351.jpg" class="card-img-top" alt="...">
+      <img src="./img/BMW_G30_FL_IMG_5351.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text"><b>Naziv:</b>BMW G30 <br> <b>Cijena: 60000 KM</b> <br> <b>Godište: </b>2016</p>   
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="/img/VW_Golf_2.0_TDI_BlueMotion_Technology_Highline_(VII)_–_Frontansicht,_28._Juli_2013,_Münster.jpg" class="card-img-top" alt="...">
+      <img src="./img/VW_Golf_2.0_TDI_BlueMotion_Technology_Highline_(VII)_–_Frontansicht,_28._Juli_2013,_Münster.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text"><b>Naziv:</b>Golf 7 <br> <b>Cijena: 15000 KM</b> <br> <b>Godište: </b>2013</p>   
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="/img/VW_Passat_B8_Limousine_2.0_TDI_Highline.JPG" class="card-img-top" alt="...">
+      <img src="./img/VW_Passat_B8_Limousine_2.0_TDI_Highline.JPG" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text"><b>Naziv:</b>VW Passat B8 <br> <b>Cijena: 30000</b> <br> <b>Godište: </b>2015</p>   
       </div>
@@ -149,21 +149,23 @@
   <br>
     <div class="ZaApi">
       </div>
-    </div>
-    
     <br>
     <br>
     <br>
     <div class="foter">
-      <div class="main">
-        <p id="pharagraph">Auto Salon M, Ulica b.b. Travnik, BiH <br>
-          Telefon: +38762111222333, Viber: +38762444555666, Email: asm@example.com <br>
-          © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
+      <div id="pharagraph">
+        <p>Auto Salon M, Ulica b.b. Travnik, BiH <br>
+            Telefon: +38762111222333
+            Viber: +38762444555666 
+            Email: asm@example.com <br>
+            © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
         </p>
-        <h3 id="logo"> Auto Salon <i>M</i></h3>
+      </div>
+      <div id="logo">
+        <h3>Auto Salon<i>M</i></h3>
       </div>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
