--- a/mainpage.html
+++ b/mainpage.html
@@ -75,7 +75,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2 " type="search" placeholder="Pretraži.." aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit" onclick="showCars()">Search</button>
+                    <input class="btn btn-outline-success" type="button" onclick="showCars()" value="Search">
                   </form>
               </div>
             </div>
