--- a/about.html
+++ b/about.html
@@ -9,80 +9,73 @@
     <link rel="stylesheet" href="./css/mainpagestyle.css">
 </head>
 <body>
-
     <div class="head">
-        <div class="news">
-            <div class="img1" style="margin-right: 5px;" >
-                <img src="./img/icons8-clock-48.png" alt="time">
-            </div>
-            <div class="text">
-                <h5>RADNO VRIJEME</h5>
-                "Pon - Pet : 09:00 - 18:00h" <br>
-                "Sub 09:00 - 15:00h"
-            </div>
+      <div class="news">
+        <div class="img1" style="margin-right: 5px;" >
+          <img src="./img/icons8-clock-48.png" alt="time">
         </div>
-        <div class="news">
-            <div class="img1" style="margin-right: 5px;" >
-                <img src="./img/icons8-call-48.png" alt="time">
-            </div>
-            <div class="text">
-                <h5>KONTAKTIRAJTE NAS</h5>
-                "Tel: +38762111222333" <br>
-                "Viber: +38762444555666"
-            </div>
+        <div class="text">
+          <h5>RADNO VRIJEME</h5>
+          "Pon - Pet : 09:00 - 18:00h" <br>
+          "Sub 09:00 - 15:00h"
         </div>
-        <div class="news">
-            <div class="img2" style="margin-right: 5px;" >
-                <img src="./img/icons8-location-48.png" alt="time">
-            </div>
-            <div class="text">
-                <h5>ADRESA</h5>
-                "Ulica b.b" <br>
-                "Travnik, BiH"
-            </div>
+      </div>
+      <div class="news">
+        <div class="img1" style="margin-right: 5px;" >
+          <img src="./img/icons8-call-48.png" alt="time">
         </div>
-        <div class="news2">
-               <h3>AUTO SALON <i>M</i></h3>
-               
+        <div class="text">
+          <h5>KONTAKTIRAJTE NAS</h5>
+          "Tel: +38762111222333" <br>
+          "Viber: +38762444555666"
         </div>
+      </div>
+      <div class="news">
+        <div class="img2" style="margin-right: 5px;" >
+          <img src="./img/icons8-location-48.png" alt="time">
+        </div>
+        <div class="text">
+          <h5>ADRESA</h5>
+          "Ulica b.b" <br>
+          "Travnik, BiH"
+        </div>
+      </div>
+      <div class="news2">
+        <h3>AUTO SALON <i>M</i></h3>
+      </div>
     </div>
     <div class="header">
       <nav class="navbar navbar-expand-lg header-nav navbar-light bg-danger">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i id="i">M</i></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarupportedContent" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarupportedContent">
-              <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href='mainpage.html'>Početna</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="allcars.html">Sva vozila</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="addingcars.html">Postavljanje vozila</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link" href="contacts.html">Kontakt</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                  <input class="form-control me-2 " type="search" placeholder="Pretraži.." aria-label="Search">
-                  <a class="btn btn-outline-success" type="submit" disabled="true" onclick="showCars()">Search</a>
-                </form>
-            </div>
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><i id="i">M</i></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarupportedContent" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation"></button>
+          <div class="collapse navbar-collapse justify-content-between" id="navbarupportedContent">
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href='mainpage.html'>Početna</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="allcars.html">Sva vozila</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="addingcars.html">Postavljanje vozila</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item me-5">
+                <a class="nav-link" href="contacts.html">Kontakt</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2 " type="search" placeholder="Pretraži.." aria-label="Search">
+              <a class="btn btn-outline-success" type="submit" disabled="true" onclick="showCars()">Search</a>
+            </form>
           </div>
-        </nav>
-        <br>
-  </div>
-  <div class="pharagraphs">
+        </div>
+      </nav> <br>
+    </div>
+    <div class="pharagraphs">
       <div class="Profil">
         <h4><b>Profil tvrtke</b><hr></h4>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime eius laborum neque obcaecati inventore aliquid qui perferendis! At a earum eligendi nam necessitatibus quidem voluptates, magni, mollitia dolorum, repudiandae quia?Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sapiente debitis molestias reiciendis quisquam totam animi maxime consectetur delectus distinctio voluptatibus dolores ipsum voluptates architecto ad, illum temporibus porro et.</p>
@@ -93,23 +86,21 @@
         <h4><b>Historija tvrtke</b><hr></h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa aliquam amet ad quas dicta numquam, consectetur, voluptatibus pariatur voluptas, asperiores maxime! Esse qui alias vel deleniti mollitia id distinctio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam nesciunt voluptatum dignissimos veniam minima neque facere cum reiciendis deleniti blanditiis. Doloribus quasi eligendi debitis nihil earum. Commodi iure molestiae tenetur, illum cum fugiat neque rerum vel aliquid suscipit! Iure, necessitatibus fuga. Eligendi voluptatum non nisi sint illo provident labore, nihil voluptas ut, impedit ea exercitationem quae accusamus minima, nostrum accusantium dolore hic beatae repellat dolores laborum! Similique doloremque tempora cupiditate totam. Consequuntur distinctio tempora dolorum ex est qui officia recusandae cum at, praesentium obcaecati nulla eaque doloremque doloribus animi facilis quibusdam sit quis excepturi expedita velit similique voluptatibus? Nihil, impedit! Deleniti, eos corrupti deserunt nihil sapiente ullam aliquid neque placeat veritatis velit eveniet at repudiandae vel ex accusamus dolore exercitationem. Facilis veritatis maxime quos doloremque tempora cum quidem quae suscipit libero est praesentium beatae nihil quia officiis dolor, aliquam quam consequuntur laudantium expedita? Qui, officia autem eos recusandae expedita totam!</p>
       </div>
-  </div>
-  <br>
-  <div class="foter">
-    <div id="pharagraph">
-      <p>Auto Salon M, Ulica b.b. Travnik, BiH <br>
+    </div>
+    <br>
+    <div class="foter">
+      <div id="pharagraph">
+        <p>Auto Salon M, Ulica b.b. Travnik, BiH <br>
           Telefon: +38762111222333
           Viber: +38762444555666 
           Email: asm@example.com <br>
           © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
-      </p>
+        </p>
+      </div>
+      <div id="logo">
+        <h3>Auto Salon<i>M</i></h3>
+      </div>
     </div>
-    <div id="logo">
-      <h3>Auto Salon<i>M</i></h3>
-    </div>
-  </div>
-    
-
     <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>  
