git push --all origin

--- a/addingcars.html
+++ b/addingcars.html
@@ -125,7 +125,7 @@
         </div>
       </form>
     </div>
-    <div class="put"></div> <br>
+    <div id="put"></div> <br>
     <div class="onlyOne"></div> <br>
     <div class="forTipka">
       <input type="button" class="btn btn-primary" id="choose" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap" value="Odabir"></input>
