git push --all origin

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2 " type="search" placeholder="Pretraži.." aria-label="Search">
-              <a class="btn btn-outline-success" type="submit" disabled="true" onclick="showCars()">Search</a>
+              <input class="btn btn-outline-success" type="submit" disabled="true" value="Search" onclick="showCars()">
             </form>
           </div>
         </div>
