--- a/addingcars.html
+++ b/addingcars.html
@@ -69,7 +69,7 @@
               </ul>
               <form class="d-flex">
                   <input class="form-control me-2 " type="search" placeholder="Pretraži.." aria-label="Search">
-                  <input class="btn btn-outline-success" type="button" onclick="showCars()" value="Search">
+                  <input class="btn btn-outline-success" type="button" onclick="showCars()" value="Search" disabled="true">
               </form>
             </div>
         </div>
