git push --all origin

--- a/contacts.html
+++ b/contacts.html
@@ -117,7 +117,7 @@
           Telefon: +38762111222333
           Viber: +38762444555666 
           Email: asm@example.com <br>
-          © Copyright 2022 Auto Salon M . All Rights Reserved. This site is designed and powered by GCR production.
+          © Copyright 2012 Auto Salon M . All Rights Reserved. This site is designed and powered by Kalabuzic.
         </p>
       </div>
       <div id="logo">
